# cpp20-masterclass

./: .gitignore  README.md
03.FirstSteps/3.2FirstCppProgram/: CMakeLists.txt  main.cpp
03.FirstSteps/3.2FirstCppProgram/src/: chopper.cpp  chopper.h
03.FirstSteps/3.3Comments/: CMakeLists.txt
03.FirstSteps/3.4ErrorsWarnings/: CMakeLists.txt  main.cpp
